--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,2 +1,14 @@
 /** Stylus Styles */
-@import '../../node_modules/vuetify/src/stylus/main'
+/** @import '../../node_modules/vuetify/src/stylus/main' */
+  @import '../../node_modules/vuetify/src/stylus/settings/_colors'
+  $theme := {
+    primary: $purple.darken-2
+    accent: $purple.accent-2
+    secondary: $orange.darken-4
+    info: $blue.lighten-1
+    warning: $amber.darken-2
+    error: $red.accent-4
+    success: $green.lighten-2
+  }
+
+  @import '../../node_modules/vuetify/src/stylus/main'
